# ComfyUI_SparkVSR_SM

./: README.md  __init__.py  model_loader_utils.py  pyproject.toml  requirements.txt  sparkvsr_inference_script.py  sparkvsr_node.py
CogVideoX1.5-5B-I2V/: model_index.json
CogVideoX1.5-5B-I2V/text_encoder/: config.json  model.safetensors.index.json
CogVideoX1.5-5B-I2V/transformer/: diffusion_pytorch_model.safetensors.index.json
CogVideoX1.5-5B-I2V/vae/: config.json
example_workflows/: SparkVSR.json
finetune/: SparkVSR_pos_sm.pt  accelerate_config.yaml  cogvideox_transformer_3d.py  sd2_pos_emptyemb_sm_.pt  trainer.py
finetune/PiSASR/: README.md  pisasr.py  requirements.txt  test_pisasr.py  train_pisasr.py
finetune/PiSASR/scripts/train/: train_pisasr.sh
finetune/PiSASR/src/datasets/: dataset.py
finetune/PiSASR/src/models/: autoencoder_kl.py  unet_2d_condition.py
finetune/PiSASR/src/my_utils/: training_utils.py  vaehook.py
finetune/configs/: zero2_offload.yaml  zero3_offload.yaml
finetune/datasets/: __init__.py  degradation.py  ref_real_sr_dataset.py  ref_real_sr_image_video_dataset.py  utils.py
finetune/models/: utils.py
finetune/models/SparkVSR/: sparkvsr_s1_ref_trainer.py  sparkvsr_s2_ref_trainer.py
finetune/schemas/: args.py  state.py
finetune/scripts/: eval_all_metrics.py  prepare_sft_ckpt.py
finetune/utils/: checkpointing.py  file_utils.py  memory_utils.py  metric_utils.py  optimizer_utils.py  ref_utils.py
stable-diffusion-2-1-base/: configuration.json
